syntax = "proto3";

package paws.grpc;

import "google/protobuf/timestamp.proto";

service Paws {
  rpc CreateDiary (Diary) returns (ResultCode) {}

  rpc FetchAllDiaries (FetchParam) returns (DiaryList) {}
}

message Diary {
  string id = 1;
	string image = 2;
	string note = 3;
	google.protobuf.Timestamp date = 4;
}

// The response message containing the greetings
message DiaryList {
  repeated Diary diaries = 1;
}

message FetchParam {

}

message ResultCode {
    int32 code = 1;
}